# fastapi-mvc-todo

./: .gitignore  main.py  pdf-gen.py  pyproject.toml  requirements.txt
config/: supabase.py
controllers/: todo_controller.py
models/: todo.py
routes/: todo_routes.py
views/: todo_view.py
